Refine OJP server memory estimates with JVM NMT three-bucket breakdown in Section 11.5
Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>